--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,44 +12,8 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.ApplyToBeASeller">
    <children>
-      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="28.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/logo.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="151.0" layoutY="36.0" text="ประเภท" textFill="#bc986a">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
-      <Label layoutX="320.0" layoutY="36.0" text="ขายดี" textFill="#bc986a">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
-      <Label layoutX="468.0" layoutY="35.0" text="แนะนำ" textFill="#bc986a">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
-      <Button layoutX="603.0" layoutY="36.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="226.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="username" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="891.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/basket.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="830.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
       <Circle fill="#c9ad88" layoutX="165.0" layoutY="242.0" radius="85.0" stroke="#c9ad88" strokeType="INSIDE" />
       <Button layoutX="66.0" layoutY="393.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE">
          <font>
@@ -108,5 +74,51 @@
          </font>
       </Button>
       <Button layoutX="769.0" layoutY="329.0" mnemonicParsing="false" style="-fx-background-color: FFFCF1;" text="ใช้ที่อยู่เริ่มต้น" />
+      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="14.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/logo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="749.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/basket.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="688.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/heart.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="278.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleLinkToBestSellerButton" style="-fx-background-color: while;" text="ขายดี" textFill="#bc986a">
+         <font>
+            <Font name="JasmineUPC" size="30.0" />
+         </font>
+      </Button>
+      <Button layoutX="400.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleLinkToRecommendButton" style="-fx-background-color: while;" text="แนะนำ" textFill="#bc986a">
+         <font>
+            <Font name="JasmineUPC" size="30.0" />
+         </font>
+      </Button>
+      <Button layoutX="528.0" layoutY="24.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
+      <MenuButton accessibleRole="LIST_VIEW" layoutX="100.0" layoutY="31.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
+         <items>
+            <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" style="-fx-background-color: #bc986a; " text="หนังสือการ์ตูน" />
+            <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
+            <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
+         </items>
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </MenuButton>
+      <Label fx:id="userName" layoutX="551.0" layoutY="32.0" text="username" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="38.0" />
+         </font>
+      </Label>
+      <TextField layoutX="818.0" layoutY="20.0" prefHeight="54.0" prefWidth="192.0" promptText="ค้นหาหนังสือ" style="-fx-background-color: BC986A; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
