--- a/src/main/resources/ku/cs/basket.fxml
+++ b/src/main/resources/ku/cs/basket.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,71 +13,56 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.BasketController">
    <children>
-      <Button layoutX="837.0" layoutY="701.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="169.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สั่งซื้อสินค้า" textFill="#fffefe">
+      <Button layoutX="837.0" layoutY="699.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="169.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="#fffefe">
          <font>
-            <Font size="24.0" />
+            <Font name="JasmineUPC" size="33.0" />
          </font>
       </Button>
-      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="18.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="12.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/logo.png" />
          </image>
       </ImageView>
-      <Label layoutX="141.0" layoutY="26.0" text="ประเภท" textFill="#bc986a">
+      <Label layoutX="133.0" layoutY="31.0" text="ประเภท" textFill="#bc986a">
          <font>
-            <Font size="30.0" />
+            <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="310.0" layoutY="26.0" text="ขายดี" textFill="#bc986a">
+      <Label layoutX="273.0" layoutY="31.0" text="ขายดี" textFill="#bc986a">
          <font>
-            <Font size="30.0" />
+            <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="458.0" layoutY="25.0" text="แนะนำ" textFill="#bc986a">
+      <Label layoutX="401.0" layoutY="31.0" text="แนะนำ" textFill="#bc986a">
          <font>
-            <Font size="30.0" />
+            <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-      <Button layoutX="593.0" layoutY="26.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="226.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="username" textFill="WHITE" AnchorPane.bottomAnchor="690.8" AnchorPane.leftAnchor="593.0" AnchorPane.rightAnchor="204.60000000000002" AnchorPane.topAnchor="26.0">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="881.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/basket.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="820.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
       <Circle fill="#c9ad88" layoutX="155.0" layoutY="232.0" radius="85.0" stroke="#c9ad88" strokeType="INSIDE" />
       <Button layoutX="56.0" layoutY="383.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font name="JasmineUPC" size="28.0" />
          </font>
       </Button>
       <Button layoutX="55.99999999999997" layoutY="461.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="202.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE" AnchorPane.rightAnchor="765.6">
          <font>
-            <Font size="20.0" />
+            <Font name="JasmineUPC" size="28.0" />
          </font>
       </Button>
       <Line endX="-100.00003051757812" endY="479.0" layoutX="407.0" layoutY="237.0" startX="-100.00003051757812" startY="-120.46665954589844" />
       <Button layoutX="56.79999999999998" layoutY="538.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE" AnchorPane.rightAnchor="765.6">
          <font>
-            <Font size="20.0" />
+            <Font name="JasmineUPC" size="28.0" />
          </font>
       </Button>
       <Button layoutX="57.400000000000006" layoutY="615.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE" AnchorPane.rightAnchor="765.0">
          <font>
-            <Font size="20.0" />
+            <Font name="JasmineUPC" size="28.0" />
          </font>
       </Button>
-      <Label layoutX="321.0" layoutY="117.0" text="สินค้าในตะกร้า" textFill="#a05e07">
+      <Label layoutX="331.0" layoutY="117.0" text="สินค้าในตะกร้า" textFill="#a05e07">
          <font>
-            <Font size="24.0" />
+            <Font name="JasmineUPC" size="35.0" />
          </font>
       </Label>
       <Line endX="69.39999389648438" layoutX="421.0" layoutY="148.0" startX="-100.0" stroke="#969696" />
@@ -86,49 +72,39 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="116.0" layoutX="342.0" layoutY="176.0" stroke="#c4c4c4" strokeType="INSIDE" width="127.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="116.0" layoutX="343.0" layoutY="522.0" stroke="#c4c4c4" strokeType="INSIDE" width="127.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="116.0" layoutX="342.0" layoutY="350.0" stroke="#c4c4c4" strokeType="INSIDE" width="127.0" />
-      <Label layoutX="485.0" layoutY="180.0" text="ชื่อร้าน">
+      <Label layoutX="485.0" layoutY="185.0" text="ชื่อร้าน">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="486.0" layoutY="355.0" text="ชื่อร้าน">
+      <Label layoutX="486.0" layoutY="361.0" text="ชื่อร้าน">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="486.0" layoutY="530.0" text="ชื่อร้าน">
+      <Label layoutX="486.0" layoutY="534.0" text="ชื่อร้าน">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="487.0" layoutY="588.0" text="รายการสินค้า">
+      <Label layoutX="487.0" layoutY="601.0" text="รายการสินค้า">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="486.0" layoutY="414.0" text="รายการสินค้า">
+      <Label layoutX="486.0" layoutY="424.0" text="รายการสินค้า">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="485.0" layoutY="239.0" text="รายการสินค้า">
+      <Label layoutX="485.0" layoutY="247.0" text="รายการสินค้า">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Button layoutX="935.0" layoutY="604.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="58.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
+      <Button layoutX="927.0" layoutY="262.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="66.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
          <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="935.0" layoutY="433.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="58.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="936.0" layoutY="260.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="58.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
-         <font>
-            <Font size="20.0" />
+            <Font name="JasmineUPC" size="27.0" />
          </font>
       </Button>
       <ImageView fitHeight="26.0" fitWidth="32.0" layoutX="964.0" layoutY="163.0" pickOnBounds="true" preserveRatio="true">
@@ -146,29 +122,69 @@
             <Image url="@image/heart.png" />
          </image>
       </ImageView>
-      <Button layoutX="742.0" layoutY="209.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="134.0" style="-fx-background-radius: 5;" text="1">
+      <TextField fx:id="editStockTextField" layoutX="772.0" layoutY="209.0" prefHeight="42.0" prefWidth="62.0" />
+      <Button layoutX="831.0" layoutY="209.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="+">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button layoutX="741.0" layoutY="388.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="134.0" style="-fx-background-radius: 5;" text="1">
+      <Button layoutX="731.0" layoutY="209.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="-">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button layoutX="741.0" layoutY="557.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="134.0" style="-fx-background-radius: 5;" text="1">
+      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="745.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/basket.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="686.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/heart.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="529.0" layoutY="19.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
+      <Label fx:id="userName" layoutX="552.0" layoutY="27.0" text="username" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="38.0" />
+         </font>
+      </Label>
+      <Button layoutX="927.0" layoutY="436.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="66.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
+         <font>
+            <Font name="JasmineUPC" size="27.0" />
+         </font>
+      </Button>
+      <Button layoutX="926.0" layoutY="607.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="66.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ลบ" textFill="#fffefe">
+         <font>
+            <Font name="JasmineUPC" size="27.0" />
+         </font>
+      </Button>
+      <TextField fx:id="editStockTextField1" layoutX="772.0" layoutY="388.0" prefHeight="42.0" prefWidth="62.0" />
+      <Button layoutX="831.0" layoutY="387.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="+">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Line endX="-87.5999755859375" layoutX="861.0" layoutY="231.0" startX="-100.0" />
-      <Line endX="-87.5999755859375" layoutX="861.0" layoutY="410.0" startX="-100.0" />
-      <Line endX="-87.5999755859375" layoutX="861.0" layoutY="580.0" startX="-100.0" />
-      <Line endX="-87.5999755859375" layoutX="945.0" layoutY="231.0" startX="-100.0" />
-      <Line endX="-87.5999755859375" layoutX="943.0" layoutY="410.0" startX="-100.0" />
-      <Line endX="-87.5999755859375" layoutX="943.0" layoutY="580.0" startX="-100.0" />
-      <Line endX="-100.0" endY="15.20001220703125" layoutX="949.0" layoutY="570.0" startX="-100.0" startY="4.79998779296875" />
-      <Line endX="-100.0" endY="15.20001220703125" layoutX="949.0" layoutY="400.0" startX="-100.0" startY="4.79998779296875" />
-      <Line endX="-100.0" endY="15.20001220703125" layoutX="951.0" layoutY="221.0" startX="-100.0" startY="4.79998779296875" />
+      <Button layoutX="731.0" layoutY="387.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="-">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <TextField fx:id="editStockTextField2" layoutX="772.0" layoutY="557.0" prefHeight="42.0" prefWidth="62.0" />
+      <Button layoutX="831.0" layoutY="556.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="+">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <Button layoutX="731.0" layoutY="556.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="45.0" style="-fx-background-radius: 5;" text="-">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <TextField layoutX="817.0" layoutY="19.0" prefHeight="54.0" prefWidth="192.0" promptText="ค้นหาหนังสือ" style="-fx-background-color: BC986A; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
