--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: BC986A;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffae9" height="338.0" layoutX="-7.0" layoutY="430.0" stroke="#fffae9" strokeType="INSIDE" width="1050.0" />
@@ -20,44 +19,53 @@
       <QuadCurve controlX="41.79998779296875" controlY="-98.33331298828125" endX="113.933349609375" endY="-34.333343505859375" fill="#fffae9" layoutX="472.0" layoutY="473.0" startX="-65.3333740234375" startY="-30.066680908203125" stroke="#fffae9" strokeType="INSIDE" />
       <QuadCurve controlX="2.066650390625" controlY="61.4666748046875" endX="113.0" endY="-7.999969482421875" fill="#bc986a" layoutX="930.0" layoutY="438.0" startX="-84.06668090820312" startY="-21.4666748046875" stroke="#bc986a" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="576.0" layoutX="573.0" layoutY="100.0" stroke="WHITE" strokeType="INSIDE" width="386.0" />
-      <Label layoutX="732.0" layoutY="114.0" text="Login">
+      <Label layoutX="738.0" layoutY="127.0" text="Login">
          <font>
-            <Font size="30.0" />
+            <Font name="JasmineUPC Bold" size="38.0" />
          </font>
       </Label>
       <Line endX="134.933349609375" layoutX="770.0" layoutY="164.0" startX="-137.066650390625" />
-      <Label layoutX="590.0" layoutY="217.0" text="Username">
+      <Label layoutX="591.0" layoutY="222.0" text="Username">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="589.0" layoutY="317.0" text="Password">
+      <Label layoutX="591.0" layoutY="325.0" text="Password">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
-      <TextField layoutX="586.0" layoutY="248.0" prefHeight="55.0" prefWidth="358.0" promptText="                     Your Username" style="-fx-background-color: FFFCF1; -fx-background-radius: 5;">
+      <TextField layoutX="586.0" layoutY="248.0" prefHeight="55.0" prefWidth="358.0" promptText="Your Username" style="-fx-background-color: FFFCF1; -fx-background-radius: 5;">
          <font>
-            <Font size="15.0" />
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </TextField>
-      <Button layoutX="699.0" layoutY="466.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="127.0" style="-fx-background-color: B78748; -fx-background-radius: 30;" text="Login" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="699.0" layoutY="466.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="127.0" style="-fx-background-color: B78748; -fx-background-radius: 30;" text="Login" textAlignment="CENTER" textFill="WHITE" onAction="#handleToHomeButton">
          <font>
-            <Font name="System Bold" size="25.0" />
+            <Font name="JasmineUPC Bold" size="38.0" />
          </font>
       </Button>
-      <Button layoutX="699.0" layoutY="522.0" mnemonicParsing="false" style="-fx-background-color: ffffff;" text="Forget your password" />
-      <Label layoutX="662.0" layoutY="633.0" text="Not have account?" />
-      <Button layoutX="783.0" layoutY="629.0" mnemonicParsing="false" style="-fx-background-color: ffffff;" text="Register here" textFill="RED" onAction="#handleToRegisterButton" />
-      <Line endX="-100.0" endY="18.93328857421875" layoutX="875.0" layoutY="631.0" startX="-100.0" />
-      <TextField layoutX="587.0" layoutY="353.0" prefHeight="55.0" prefWidth="358.0" promptText="                     Your Password" style="-fx-background-color: FFFCF1; -fx-background-radius: 5;">
+      <Button layoutX="691.0" layoutY="522.0" mnemonicParsing="false" style="-fx-background-color: ffffff;" text="Forget your password">
          <font>
-            <Font size="15.0" />
+            <Font name="JasmineUPC" size="20.0" />
+         </font></Button>
+      <Label layoutX="657.0" layoutY="634.0" text="Not have account?">
+         <font>
+            <Font name="JasmineUPC" size="20.0" />
+         </font></Label>
+      <Button layoutX="777.0" layoutY="628.0" mnemonicParsing="false" onAction="#handleToRegisterButton" style="-fx-background-color: ffffff;" text="Register here" textFill="RED">
+         <font>
+            <Font name="JasmineUPC" size="20.0" />
+         </font></Button>
+      <Line endX="-100.0" endY="18.93328857421875" layoutX="875.0" layoutY="631.0" startX="-100.0" />
+      <TextField layoutX="587.0" layoutY="353.0" prefHeight="55.0" prefWidth="358.0" promptText="Your Password" style="-fx-background-color: FFFCF1; -fx-background-radius: 5;">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
          </font>
       </TextField>
-      <Label layoutX="718.0" layoutY="34.0" text="ABOUT US | PROMOTION" textFill="WHITE">
+      <Label layoutX="835.0" layoutY="41.0" text="|   PROMOTION" textFill="WHITE">
          <font>
-            <Font name="Arial Black" size="20.0" />
+            <Font name="JasmineUPC Bold" size="28.0" />
          </font>
       </Label>
       <ImageView fitHeight="88.0" fitWidth="74.0" layoutX="12.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
@@ -65,14 +73,19 @@
             <Image url="@image/javapaiver.brown.png" />
          </image>
       </ImageView>
-      <Button layoutX="125.0" layoutY="539.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="330.0" style="-fx-background-color: ffffff; -fx-background-radius: 20;" text="| ชื่อนักเขียน , นิยาย                                 ">
+      <Button layoutX="125.0" layoutY="539.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="330.0" style="-fx-background-color: ffffff; -fx-background-radius: 20;" text="| ชื่อนักเขียน , นิยาย                                           ">
          <font>
-            <Font name="Arial Black" size="18.0" />
+            <Font name="JasmineUPC" size="20.0" />
          </font>
       </Button>
       <Button layoutX="309.0" layoutY="544.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="137.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="Searching" textFill="WHITE">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </Button>
+      <Button layoutX="704.0" layoutY="30.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="136.0" style="-fx-background-color: BC986A;" text="ABOUT US" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC Bold" size="28.0" />
          </font>
       </Button>
    </children>
