--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,67 +14,7 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #fff; -fx-border-color: #ef0404;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.SellerController">
    <children>
-      <Label layoutX="161.0" layoutY="35.0" text="ประเภท" textFill="#c9ad88">
-         <font>
-            <Font name="JasmineUPC" size="36.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="76.0" fitWidth="61.0" layoutX="14.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/logo.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="507.0" layoutY="38.0" text="แนะนำ" textFill="#c9ad88">
-         <font>
-            <Font name="JasmineUPC" size="36.0" />
-         </font>
-      </Label>
-      <Button layoutX="49.0" layoutY="340.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Label layoutX="352.0" layoutY="35.0" text="ขายดี" textFill="#c9ad88">
-         <font>
-            <Font name="JasmineUPC" size="36.0" />
-         </font>
-      </Label>
-      <Line endX="-100.0" endY="191.800048828125" layoutX="376.0" layoutY="444.0" startX="-100.0" startY="-338.6000061035156" />
-      <Label layoutX="86.0" layoutY="353.0" text="ข้อมูลส่วนตัว" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <Button layoutX="49.0" layoutY="415.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button layoutX="48.0" layoutY="489.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button layoutX="49.0" layoutY="569.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Label layoutX="81.0" layoutY="428.0" text="สินค้าในตะกร้า" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="91.0" layoutY="502.0" text="ข้อมูลผู้ขาย" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="96.0" layoutY="582.0" text="ข้อมูลผู้ซื้อ" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
+      <Line endX="-100.00003051757812" endY="269.86663818359375" layoutX="376.0" layoutY="444.0" startX="-100.0" startY="-338.6000061035156" />
       <Circle fill="#c9ad88" layoutX="137.0" layoutY="220.0" radius="78.0" stroke="WHITE" strokeType="INSIDE" />
       <Label layoutX="293.0" layoutY="105.0" text="ผู้ขายสินค้า" textFill="#a05e07">
          <font>
@@ -127,27 +69,26 @@
             <Font name="JasmineUPC" size="34.0" />
          </font>
       </Label>
-      <Button layoutX="821.0" layoutY="600.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+      <Button layoutX="821.0" layoutY="632.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button layoutX="821.0" layoutY="663.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+      <Button layoutX="821.0" layoutY="695.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Label layoutX="870.0" layoutY="613.0" text="เพิ่มสินค้า" textFill="WHITE">
+      <Label layoutX="870.0" layoutY="649.0" text="เพิ่มสินค้า" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="857.0" layoutY="676.0" text="สินค้าทั้งหมด" textFill="WHITE">
+      <Label layoutX="857.0" layoutY="712.0" text="สินค้าทั้งหมด" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="637.0" layoutY="30.0" prefHeight="44.0" prefWidth="199.0" promptText="USERNAME" style="-fx-background-color: F99F28; -fx-background-radius: 10; -fx-effect: shadow;" />
       <Label layoutX="366.0" layoutY="313.0" text="*" textFill="#ef0404">
          <font>
             <Font name="JasmineUPC" size="25.0" />
@@ -178,5 +119,71 @@
             <Font name="JasmineUPC" size="25.0" />
          </font>
       </Label>
+      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="12.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/logo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="747.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/basket.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="686.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/heart.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="276.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleLinkToBestSellerButton" style="-fx-background-color: while;" text="ขายดี" textFill="#bc986a">
+         <font>
+            <Font name="JasmineUPC" size="30.0" />
+         </font>
+      </Button>
+      <Button layoutX="398.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleLinkToRecommendButton" style="-fx-background-color: while;" text="แนะนำ" textFill="#bc986a">
+         <font>
+            <Font name="JasmineUPC" size="30.0" />
+         </font>
+      </Button>
+      <Button layoutX="526.0" layoutY="21.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
+      <MenuButton accessibleRole="LIST_VIEW" layoutX="98.0" layoutY="28.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
+         <items>
+            <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" style="-fx-background-color: #bc986a; " text="หนังสือการ์ตูน" />
+            <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
+            <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
+         </items>
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </MenuButton>
+      <Label fx:id="userName" layoutX="549.0" layoutY="29.0" text="username" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="38.0" />
+         </font>
+      </Label>
+      <TextField layoutX="816.0" layoutY="17.0" prefHeight="54.0" prefWidth="192.0" promptText="ค้นหาหนังสือ" style="-fx-background-color: BC986A; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="25.0" />
+         </font>
+      </TextField>
+      <Button layoutX="36.0" layoutY="368.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="28.0" />
+         </font>
+      </Button>
+      <Button layoutX="35.99999999999997" layoutY="446.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="202.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="28.0" />
+         </font>
+      </Button>
+      <Button layoutX="36.79999999999998" layoutY="523.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="28.0" />
+         </font>
+      </Button>
+      <Button layoutX="37.400000000000006" layoutY="600.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="28.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
