--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -1,189 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #fff; -fx-border-color: #ef0404;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.SellerController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Line endX="-100.00003051757812" endY="269.86663818359375" layoutX="376.0" layoutY="444.0" startX="-100.0" startY="-338.6000061035156" />
-      <Circle fill="#c9ad88" layoutX="137.0" layoutY="220.0" radius="78.0" stroke="WHITE" strokeType="INSIDE" />
-      <Label layoutX="293.0" layoutY="105.0" text="ผู้ขายสินค้า" textFill="#a05e07">
-         <font>
-            <Font name="JasmineUPC" size="42.0" />
-         </font>
-      </Label>
-      <Line endX="-598.2000122070312" endY="-338.6000061035156" layoutX="888.0" layoutY="480.0" startX="66.4000244140625" startY="-338.6000061035156" stroke="#bc986a" strokeWidth="0.5" />
-      <Label layoutX="304.0" layoutY="313.0" text="ชื่อสินค้า">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="296.0" layoutY="418.0" text="จำนวนสินค้าในคลัง">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="288.0" layoutY="523.0" text="รายละเอียดของสินค้า">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="682.0" layoutY="313.0" text="ราคาของสินค้า">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Circle fill="#c9ad88" layoutX="604.0" layoutY="229.0" radius="78.0" stroke="WHITE" strokeType="INSIDE" />
-      <Label layoutX="682.0" layoutY="418.0" text="หมวดหมู่ของสินค้า">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <TextField layoutX="304.0" layoutY="340.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกชื่อสินค้า" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-      <TextField layoutX="304.0" layoutY="446.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกจำนวน " style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-      <TextField layoutX="299.0" layoutY="544.0" prefHeight="110.0" prefWidth="470.0" promptText="อธิบายรายละเอียดพอสังเขป" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-      <TextField layoutX="682.0" layoutY="340.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกราคาสินค้า" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;">
-         <font>
-            <Font name="JasmineUPC" size="12.0" />
-         </font>
-      </TextField>
-      <TextField layoutX="682.0" layoutY="446.0" prefHeight="44.0" prefWidth="199.0" promptText="กรอกหมวดหมู่สินค้า" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-      <Label layoutX="393.0" layoutY="685.0" text="กำหนดสินค้าขั้นต่ำ : ">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
-      </Label>
-      <TextField layoutX="522.0" layoutY="663.0" prefHeight="44.0" prefWidth="199.0" promptText="โปรดระบุจำนวนในคลัง" style="-fx-background-radius: 10; -fx-effect: shadow;" />
-      <Line endX="18.799957275390625" endY="-325.20001220703125" layoutX="425.0" layoutY="433.0" startX="18.799957275390625" startY="-301.3999938964844" stroke="#bc986a" strokeWidth="0.5" />
-      <Label layoutX="454.0" layoutY="107.0" text="เพิ่มสินค้าของคุณ" textFill="#533b1b">
-         <font>
-            <Font name="JasmineUPC" size="34.0" />
-         </font>
-      </Label>
-      <Button layoutX="821.0" layoutY="632.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button layoutX="821.0" layoutY="695.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="166.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Label layoutX="870.0" layoutY="649.0" text="เพิ่มสินค้า" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="857.0" layoutY="712.0" text="สินค้าทั้งหมด" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="366.0" layoutY="313.0" text="*" textFill="#ef0404">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="792.0" layoutY="313.0" text="*" textFill="#ef0404">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="440.0" layoutY="418.0" text="*" textFill="#ef0404">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="444.0" layoutY="523.0" text="*" textFill="#ef0404">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="654.0" layoutY="158.0" text="*" textFill="#ef0404">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="721.0" layoutY="675.0" text="*" textFill="#ef0404">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="64.0" fitWidth="66.0" layoutX="12.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/logo.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="747.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/basket.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="65.0" layoutX="686.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/heart.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="276.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleLinkToBestSellerButton" style="-fx-background-color: while;" text="ขายดี" textFill="#bc986a">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Button>
-      <Button layoutX="398.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleLinkToRecommendButton" style="-fx-background-color: while;" text="แนะนำ" textFill="#bc986a">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Button>
-      <Button layoutX="526.0" layoutY="21.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
-      <MenuButton accessibleRole="LIST_VIEW" layoutX="98.0" layoutY="28.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
-         <items>
-            <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" style="-fx-background-color: #bc986a; " text="หนังสือการ์ตูน" />
-            <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
-            <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
-         </items>
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </MenuButton>
-      <Label fx:id="userName" layoutX="549.0" layoutY="29.0" text="username" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="38.0" />
-         </font>
-      </Label>
-      <TextField layoutX="816.0" layoutY="17.0" prefHeight="54.0" prefWidth="192.0" promptText="ค้นหาหนังสือ" style="-fx-background-color: BC986A; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </TextField>
-      <Button layoutX="36.0" layoutY="368.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
-      <Button layoutX="35.99999999999997" layoutY="446.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="202.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
-      <Button layoutX="36.79999999999998" layoutY="523.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
-      <Button layoutX="37.400000000000006" layoutY="600.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="201.0" style="-fx-background-color: C9AD88; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Button>
+      <BorderPane layoutX="303.0" layoutY="151.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
